added installation of libgl1-mesa-dev to gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,20 @@ pytest:
   stage: test
   image: python:3.10
   script:
+    # - cp /etc/apt/sources.list /etc/apt/sources.list.bak
+    # - echo "deb https://mirrors.aliyun.com/debian/ bullseye main non-free contrib" > /etc/apt/sources.list
+    # - echo "deb-src https://mirrors.aliyun.com/debian/ bullseye main non-free contrib" >> /etc/apt/sources.list
+    # - echo "deb https://mirrors.aliyun.com/debian-security/ bullseye-security main" >> /etc/apt/sources.list
+    # - echo "deb-src https://mirrors.aliyun.com/debian-security/ bullseye-security main" >> /etc/apt/sources.list
+    # - echo "deb https://mirrors.aliyun.com/debian/ bullseye-updates main non-free contrib" >> /etc/apt/sources.list
+    # - echo "deb-src https://mirrors.aliyun.com/debian/ bullseye-updates main non-free contrib" >> /etc/apt/sources.list
+    # - echo "deb https://mirrors.aliyun.com/debian/ bullseye-backports main non-free contrib" >> /etc/apt/sources.list
+    # - echo "deb-src https://mirrors.aliyun.com/debian/ bullseye-backports main non-free contrib" >> /etc/apt/sources.list
+    - apt-get update
+    - apt-get install libgl1-mesa-dev -y
+    - pip install --upgrade pip
     - pip install -r requirements.txt
     - echo $(pwd)
-    - PYTHONPATH=$(pwd) python -m pytest tests --cache-clear
+    - python -m pytest tests --cache-clear
   rules:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
