--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,10 +16,9 @@ pytest:
     # - echo "deb-src https://mirrors.aliyun.com/debian/ bullseye-backports main non-free contrib" >> /etc/apt/sources.list
     - apt-get update
     - apt-get install libgl1-mesa-dev -y
+    # - pip config set global.index-url https://mirrors.bfsu.edu.cn/pypi/web/simple
     - pip install --upgrade pip
     - pip install -r requirements.txt
-    - pip install openmim
-    - mim install -r mim-requirements.txt
     - echo $(pwd)
     - python -m pytest tests --junitxml=report.xml --cov=./ --cov-report=xml
   artifacts:
