--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,8 @@ pytest:
     # - pip config set global.index-url https://mirrors.bfsu.edu.cn/pypi/web/simple
     - pip install --upgrade pip
     - pip install -r requirements.txt
+    - pip install openmim
+    - mim install -r mim-requirements.txt
     - echo $(pwd)
     - python -m pytest tests --junitxml=report.xml --cov=./ --cov-report=xml
   artifacts:
