--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
-numpy>=1.26.2
+numpy==1.26.4
 copious>=0.1.20
-loguru
-scipy
-tqdm
+scipy==1.14.1
 easydict==1.13
+numba==0.60.0
 nuscenes-devkit
-numba>=0.59.0
 opencv-python-headless
 virtual-camera>=0.0.4.3
 open3d>=0.18.0
 torch>=2.3.0
 torchvision>=0.18.0
 transformers>=4.32.0
-pytest
-pytest-cov
 pypcd-imp==0.1.5
 tensorboard==2.17.1
 mmengine==0.10.4
 mmdet3d==1.4.0
 mmdet==3.2.0
+pytest==8.3.3
+pytest-cov
+loguru
+tqdm
