--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,24 @@
 stages:
+  - build
   - test
+
+build_image:
+  stage: build
+  image: docker:latest
+  services:
+    - docker:dind
+  variables:
+    IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
+  script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker build -t $IMAGE_TAG .
+    - docker push $IMAGE_TAG
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 pytest:
   stage: test
-  image: python:3.10
+  image: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
   script:
     # - cp /etc/apt/sources.list /etc/apt/sources.list.bak
     # - echo "deb https://mirrors.aliyun.com/debian/ bullseye main non-free contrib" > /etc/apt/sources.list
@@ -14,13 +29,13 @@ pytest:
     # - echo "deb-src https://mirrors.aliyun.com/debian/ bullseye-updates main non-free contrib" >> /etc/apt/sources.list
     # - echo "deb https://mirrors.aliyun.com/debian/ bullseye-backports main non-free contrib" >> /etc/apt/sources.list
     # - echo "deb-src https://mirrors.aliyun.com/debian/ bullseye-backports main non-free contrib" >> /etc/apt/sources.list
-    - apt-get update
-    - apt-get install libgl1-mesa-dev -y
+    # - apt-get update
+    # - apt-get install libgl1-mesa-dev -y
     # - pip config set global.index-url https://mirrors.bfsu.edu.cn/pypi/web/simple
-    - pip install --upgrade pip
-    - pip install -r requirements.txt
-    - pip install openmim
-    - mim install -r mim-requirements.txt
+    # - pip install --upgrade pip
+    # - pip install -r requirements.txt
+    # - pip install openmim
+    # - mim install -r mim-requirements.txt
     - echo $(pwd)
     - python -m pytest tests --junitxml=report.xml --cov=./ --cov-report=xml
   artifacts:
