fixed bug in PlanarBbox3DAveragePrecision

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 numpy==1.26.4
-copious>=0.1.22
+copious>=0.1.23
 scipy==1.14.1
 easydict==1.13
 numba==0.60.0
 nuscenes-devkit
 opencv-python-headless
 virtual-camera>=0.0.4.3
-open3d>=0.18.0
-torch>=2.3.0
-torchvision>=0.18.0
-transformers>=4.32.0
+open3d==0.18.0
+torch==2.4.1
+torchvision==0.19.1
+transformers==4.45.2
 pypcd-imp==0.1.5
 tensorboard==2.17.1
 mmengine==0.10.5
