added spconv-cu121 and modified flash_attn version

--- a/Dockerfile_ci
+++ b/Dockerfile_ci
@@ -20,18 +20,14 @@ RUN rm conda_installer.sh
 ENV PATH=/opt/conda/bin:$PATH
 ENV CUDA_HOME=/usr/local/cuda
 
-# conda install critical libraries
-COPY .condarc /root/.condarc
-RUN conda install -y numba=0.60.0 numpy=1.26.4 scipy=1.14.1 pytorch=2.4.1 torchvision=0.19.1 torchaudio=2.4.1 pytorch-cuda=12.1 -c pytorch -c nvidia
-
-# pip install other libraries
+# install requirements
 RUN pip config set global.index-url https://mirrors.bfsu.edu.cn/pypi/web/simple
+COPY requirements.txt /requirements.txt
+COPY mim-requirements.txt /mim-requirements.txt
 RUN pip install --no-cache-dir --upgrade pip
-RUN pip install --no-cache-dir copious==0.1.24 easydict==1.13 nuscenes-devkit opencv-python-headless virtual-camera==0.0.4.3 open3d==0.18.0 transformers==4.45.2 pypcd-imp==0.1.5 mmengine==0.10.5 mmdet3d==1.4.0 mmdet==3.2.0 pytest==8.3.3 pytest-cov loguru tqdm
-
+RUN pip install --no-cache-dir -r /requirements.txt
 # If not use docker build, we need to temporarily put cuda (of correct version) to /usr/loca/cuda or conda install cuda-toolkit cuda-cudart cuda-cccl libcublas libcusparse libcusolver
 RUN pip install --no-cache-dir flash-attn==2.6.3
-
 # Install mmcv
 RUN pip install --no-cache-dir openmim
 COPY mim-requirements.txt /mim-requirements.txt
@@ -39,7 +35,7 @@ RUN mim install --no-cache-dir -r /mim-requirements.txt
 
 # RUN mv /etc/apt/sources.list.bak /etc/apt/sources.list
 
-# install libgllib2.0 and set TimeZone
+# install libgllib2.0 and set timezone
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=Asia/Shanghai
 RUN apt-get update \
@@ -61,7 +57,6 @@ RUN apt-get update \
    && apt-get install -y vim htop iputils-ping  \
    && apt-get clean \
    && rm -rf /var/lib/apt/lists/*
-
 # install extra python packages
 RUN pip install --no-cache-dir copious==0.1.24
 RUN pip install --no-cache-dir redis==5.2.0
