--- a/.github/workflows/run-pytest.yml
+++ b/.github/workflows/run-pytest.yml
@@ -15,7 +15,7 @@ jobs:
 
       # Pull your pre-built Docker image
       - name: Pull Docker image
-        run: docker pull brianlan/prefusion:v10
+        run: docker pull brianlan/prefusion:ci-v10
 
       # Run pytest inside the Docker container
       - name: Run pytest
@@ -23,5 +23,5 @@ jobs:
           docker run --rm \
             -v "$(pwd):/workspace" \
             -w /workspace \
-            brianlan/prefusion:v10 \
+            brianlan/prefusion:ci-v10 \
             python -m pytest tests --junitxml=report.xml --cov=./ --cov-report=xml
