fixed the channel problem in r18 config

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,4 +1,5 @@
 {
+    "typeCheckingMode": "standard", // "off", "basic", "standard", "strict"
     "exclude": [
         "**/build/**",
         "**/ckpts/**",
