--- a/tools/evaluator/config_mtv.json
+++ b/tools/evaluator/config_mtv.json
@@ -1,15 +1,48 @@
 {
   "class_range": {
-    "car": 50,
-    "truck": 50,
-    "bus": 50,
-    "trailer": 50,
-    "construction_vehicle": 50,
-    "pedestrian": 40,
-    "motorcycle": 40,
-    "bicycle": 40,
-    "traffic_cone": 30,
-    "barrier": 30
+    "passenger_car": 9,
+    "bus":9,
+    "truck": 9,
+    "ambulance":9,
+    "env_protect": 9,
+    "fire_engine":9,
+    "motorcycle": 9,
+    "bicycle":9,
+    "tricycle": 9,
+    "cleaning_cart":9,
+    "shopping_cart": 9,
+    "stroller":9,
+    "scooter": 9
+  },
+  "conf_thres": {
+    "passenger_car": 0.1,
+    "bus":0.1,
+    "truck": 0.1,
+    "ambulance":0.1,
+    "env_protect": 0.1,
+    "fire_engine":0.1,
+    "motorcycle": 0.1,
+    "bicycle":0.1,
+    "tricycle": 0.1,
+    "cleaning_cart":0.1,
+    "shopping_cart": 0.1,
+    "stroller":0.1,
+    "scooter":0.19
+  },
+  "data": {
+    "passenger_car": 0.1,
+    "bus":0.1,
+    "truck": 0.1,
+    "ambulance":0.1,
+    "env_protect": 0.1,
+    "fire_engine":0.1,
+    "motorcycle": 0.1,
+    "bicycle":0.1,
+    "tricycle": 0.1,
+    "cleaning_cart":0.1,
+    "shopping_cart": 0.1,
+    "stroller":0.1,
+    "scooter":0.19
   },
   "dist_fcn": "center_distance",
   "dist_ths": [0.5, 1.0, 2.0, 4.0],
