--- a/Dockerfile_ci
+++ b/Dockerfile_ci
@@ -71,6 +71,7 @@ RUN mim install --no-cache-dir -r /mim-requirements.txt
 # Install flash attention
 RUN pip install --no-cache-dir flash-attn==2.6.3
 RUN pip install --no-cache-dir mtv4d==0.1.3
+RUN pip install --no-cache-dir polars==1.28.0
 
 # RUN pip install --no-cache-dir \
         # nuscenes-devkit \
