add base backbone vovnet model

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,5 +1,5 @@
 {
-    "typeCheckingMode": "standard", // "off", "basic", "standard", "strict"
+    "typeCheckingMode": "off", // "off", "basic", "standard", "strict"
     "exclude": [
         "**/build/**",
         "**/ckpts/**",
