1) enabled roi_head; 2) copied BBoxL1Cost and IoUCost to prefusion

--- a/Dockerfile_ci
+++ b/Dockerfile_ci
@@ -72,6 +72,7 @@ RUN mim install --no-cache-dir -r /mim-requirements.txt
 RUN pip install --no-cache-dir flash-attn==2.6.3
 RUN pip install --no-cache-dir mtv4d==0.1.3
 RUN pip install --no-cache-dir polars==1.28.0
+RUN pip install --no-cache-dir copious==0.1.26
 
 # RUN pip install --no-cache-dir \
         # nuscenes-devkit \
